--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "author": "letrananhvu <letrananhvu>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.21",
     "morgan": "^1.10.0"
