--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "heroku logs --tail",
     "lint": "eslint .",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
+    "start:test": "cross-env NODE_ENV=test node index.js"
   },
   "devDependencies": {
     "eslint": "^7.3.1",
